--- a/src/components/css/statistics.css
+++ b/src/components/css/statistics.css
@@ -2,14 +2,40 @@
   background-color: #ffffff;
   width: 95%;
   text-align: center;
+  background-color: #dde794;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 10px 5px 7px #8e945e;
+  margin-bottom: 40px;
+  padding: 40px 8px 8px;
+  color: #333522;
+}
+
+.title {
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .stat-list {
   display: flex;
+  gap: 10px;
   width: 100%;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .item {
-  width: 20%;
+  width: calc((100% - (10px * 4)) / 5);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #8e945e;
+  font-size: 28px;
+}
+.label {
+  padding-bottom: 8px;
+  border-bottom: 1px solid #333522;
+}
+.percentage {
+  padding-top: 8px;
 }
