--- a/src/components/css/statistics.css
+++ b/src/components/css/statistics.css
@@ -6,7 +6,7 @@
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 10px 5px 7px #8e945e;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   padding: 40px 8px 8px;
   color: #333522;
 }
@@ -25,7 +25,7 @@
   margin: 0;
 }
 
-.item {
+.statistics .item {
   width: calc((100% - (10px * 4)) / 5);
   padding: 20px;
   border-radius: 10px;
@@ -33,9 +33,5 @@
   font-size: 28px;
 }
 .label {
-  padding-bottom: 8px;
-  border-bottom: 1px solid #333522;
-}
-.percentage {
-  padding-top: 8px;
+  margin-bottom: 8px;
 }
