--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eeeeee;
+  text-shadow: 1px 1px 2px #3d6b5c;
 }
 
 code {
